@@ -229,6 +229,13 @@ User.prototype.initCallbacks = function () {
 
     self.socket.on("chatMsg", function (data) {
         if (self.inChannel()) {
+            if (typeof data.msg !== "string") {
+                self.socket.emit("kick", {
+                    reason: "Invalid chatMsg packet!"
+                });
+                self.socket.disconnect(true);
+                return;
+            }
             if (data.msg.indexOf("/afk") !== 0) {
                 self.setAFK(false);
                 self.autoAFK();
